<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background_allpages"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="200dp"
        android:layout_height="150dp"
        android:layout_gravity="right"
        android:layout_marginRight="30dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/box_transparent_attendance"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="15dp" >

            <TextView
                android:id="@+id/welcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:text="@string/welcome"
                android:textColor="#ffffff"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:text="Fadli"
                android:textColor="#ffffff"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="35dp" >

            <TextView
                android:id="@+id/checkInText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/checkInText"
                android:textColor="#ffffff"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/checkOutText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/checkOutText"
                android:textColor="#ffffff"
                android:textSize="12sp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/currentTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:text="08:00"
                android:textColor="#ffffff"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal"
            android:paddingTop="15dp" >

            <ImageButton
                android:id="@+id/checkInButton"
                android:layout_width="70dp"
                android:layout_height="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/button_attendance_checkin" />

            <ImageButton
                android:id="@+id/checkOutButton"
                android:layout_width="70dp"
                android:layout_height="20dp"
                android:background="@drawable/button_attendance_checkout" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="5dp" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingLeft="15dp" >

            <ImageButton
                android:id="@+id/profileButton"
                android:layout_width="70dp"
                android:layout_height="20dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/button_main_menu_profile" />

            <ImageButton
                android:id="@+id/voucherButton"
                android:layout_width="70dp"
                android:layout_height="20dp"
                android:background="@drawable/button_mainmenuvoucher" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="30dp"
            android:layout_weight="1"
            android:gravity="right"
            android:orientation="vertical" >

            <ImageButton
                android:id="@+id/dailyAttandanceButton"
                android:layout_width="90dp"
                android:layout_height="20dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/button_daily_attendance" />

            <ImageButton
                android:id="@+id/attandanceListButton"
                android:layout_width="90dp"
                android:layout_height="20dp"
                android:background="@drawable/button_attendance_attendance_list" />
        </LinearLayout>
    </LinearLayout>

    <ImageButton
        android:id="@+id/signOutButton"
        android:layout_width="70dp"
        android:layout_height="20dp"
        android:layout_gravity="right"
        android:layout_marginRight="30dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_signout" />

</LinearLayout>