<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_allpages"
    android:orientation="vertical"
    android:paddingBottom="20dp"
    android:paddingLeft="45dp"
    android:paddingRight="45dp"
    android:paddingTop="40dp"
    tools:context=".ReportActivity" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.7" >
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:background="@drawable/box_transparent_attreport"
            android:orientation="vertical"
            android:paddingBottom="20dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="70dp" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="horizontal" >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.01"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/dateReport"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/date_report"
                        android:textColor="#ffff"
                        android:textSize="12sp" >
                    </TextView>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/box_addtext_month_year"
                        android:layout_marginLeft="10dp" >

                        <TextView
                            android:id="@+id/inputDateReport"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="#ffff"
                            android:textSize="12sp" >
                        </TextView>
                    </LinearLayout>

                    <ImageView
                        android:id="@+id/dateReportId"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/nuicon_datealt"
                        android:layout_marginLeft="5dp"
                       >
                    </ImageView>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.1" >
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.01"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/filterReport"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.1"
                        android:text="@string/filter_report"
                        android:textColor="#ffff"
                        android:textSize="12sp" >
                    </TextView>

                    <TextView
                        android:id="@+id/employeeIdLabelsProfile"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.1"
                        android:paddingBottom="10dp"
                        android:text="@string/employeeId_profile"
                        android:textColor="#ffff"
                        android:textSize="12sp" >
                    </TextView>
                </LinearLayout>
            </LinearLayout>

            <include layout="@layout/list_report" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="bottom"
                android:orientation="horizontal" 
                android:layout_marginTop="10dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.01"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/employeeIdLabelsProfile"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.1"
                        android:paddingBottom="10dp"
                        android:text="showing 1 t0 10"
                        android:textColor="#ffff"
                        android:textSize="12sp" >
                    </TextView>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.1" >
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.01"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/employeeIdLabelsProfile"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.1"
                        android:paddingBottom="10dp"
                        android:text="@string/employeeId_profile"
                        android:textColor="#ffff"
                        android:textSize="12sp" >
                    </TextView>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="bottom"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.01"
            android:background="@drawable/button_back" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.1" >
        </LinearLayout>

        <Button
            android:id="@+id/signout_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.01"
            android:background="@drawable/button_signout" />
    </LinearLayout>

</LinearLayout>